cambios en el boton de vaciar wl

--- a/index.html
+++ b/index.html
@@ -42,14 +42,17 @@
     </nav>
 
     <input type="checkbox" id="btnDeseos">
-    <div class="containerDeseos">
+    <div class="containerDeseos" id="favDiv">
         <table class="table">
             <tbody id="itemsFav"></tbody>
             <tfoot>
                 <tr id="footerFav">
-                  <th scope="row" colspan="5">Wish List vacia</th>
+                    <th scope="row" colspan="5">Wish List vacia</th>
                 </tr>
-              </tfoot>
+                <td id="btnVaciarWL">
+                    
+                </td>
+            </tfoot>
         </table>
     </div>
 
@@ -103,14 +106,6 @@
             <h2 class="text-center mt-5 titulo">BEST SELLERS</h2>
             <div class="linea"></div>
             <div class="cardContenedor mt-5 mb-5" id="cards">
-                <!-- aca adentro pinto mis cards -->
-            </div>
-        </section>
-        <!-- deco -->
-        <section class="container">
-            <h2 class="text-center mt-5 titulo">BEST SELLERS</h2>
-            <div class="linea"></div>
-            <div class="cardContenedor mt-5 mb-5" id="cardsDeco">
                 <!-- aca adentro pinto mis cards -->
             </div>
         </section>
