--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- mi css -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Dekorkunst Prueba</title>
+    <script src="./assets/sweet/sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="./assets/sweet/sweetalert2.css">
 </head>
 <body>
     <nav class="menu">
@@ -103,7 +105,7 @@
         </section>
         <!-- best sellers -->
         <section class="container">
-            <h2 class="text-center mt-5 titulo">BEST SELLERS</h2>
+            <h2 class="text-center mt-5 titulo" id="titulo">BEST SELLERS</h2>
             <div class="linea"></div>
             <div class="cardContenedor mt-5 mb-5" id="cards">
                 <!-- aca adentro pinto mis cards -->
@@ -224,12 +226,11 @@
     </footer>
 
     
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-    <!-- sweet alert -->
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- mi js -->
     <script src="./js/app.js"></script>
+     <!-- bootstrap -->
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+
 </body>
 </html>
