agregue nuevos productos y secciones

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
             <a href="index.html"><img class="logo" src="img/logo2.png" alt="logo"/></a>
         </div>
         <ul class="menuItems">
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="deco.html"> Deco </a></li>
-            <li><a href="cuadros.html"> Cuadros </a></li>
-            <li><a href="velas.html"> Velas </a></li>
-           <!--  <li><a href="contacto.html"> Contacto </a></li> -->
+            <li><a href="#"> Home </a></li>
+            <li><a href="#deco"> Deco </a></li>
+            <li><a href="#velas"> Velas </a></li>
+            <li><a href="./pages/contacto.html"> Contacto </a></li>
         </ul>
         <div class="btnCarrito">
             <label for="btnCarrito"> <i class="fa fa-cart-plus"></i> </label>
@@ -105,10 +104,27 @@
         </section>
         <!-- best sellers -->
         <section class="container">
-            <h2 class="text-center mt-5 titulo" id="titulo">BEST SELLERS</h2>
+            <h2 class="text-center mt-5 titulo">BEST SELLERS</h2>
             <div class="linea"></div>
             <div class="cardContenedor mt-5 mb-5" id="cards">
                 <!-- aca adentro pinto mis cards -->
+            </div>
+        </section>
+        <!-- deco -->
+        <section class="container">
+            <div class="linea" id="deco"></div>
+            <h2 class="text-center mt-5 titulo">DECO</h2>
+            <div class="linea"></div>
+            <div class="cardContenedor mt-5 mb-5" id="cardsDeco">
+                <!-- aca adentro pinto mis cards de deco -->
+            </div>
+        </section>
+        <section class="container">
+            <div class="linea"  id="velas"></div>
+            <h2 class="text-center mt-5 titulo">VELAS</h2>
+            <div class="linea"></div>
+            <div class="cardContenedor mt-5 mb-5" id="cardsVelas">
+                <!-- aca adentro pinto mis cards de velas -->
             </div>
         </section>
 
@@ -187,17 +203,14 @@
                             <a class="nav-link-footer" href="#">Home</a>
                         </li>
                         <li class="mb-1">
-                            <a class="nav-link-footer" href="deco.html">Deco</a>
+                            <a class="nav-link-footer" href="#deco">Deco</a>
                         </li>
                         <li class="mb-1">
-                            <a class="nav-link-footer" href="cuadros.html">Cuadros</a>
+                            <a class="nav-link-footer" href="#velas">Velas</a>
                         </li>
                         <li class="mb-1">
-                            <a class="nav-link-footer" href="velas.html">Velas</a>
+                            <a class="nav-link-footer" href="./pages/contacto.html">Contacto</a>
                         </li>
-                        <!-- <li class="mb-1">
-                            <a class="nav-link-footer" href="contacto.html">Contacto</a>
-                        </li> -->
                     </ul>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-md-center text-center  mb-sm-4 contacto">
